[package]
name = "sandpile_fractal"
version = "0.1.0"
authors = ["Elliott Mahler <emahler@usc.edu>"]
edition = "2018"

[dependencies]
image = "*"
rayon = "*"
serde = "*"
serde_derive = "*"
bincode = "*"
reqwest = "*"
iced = { git = "https://github.com/hecrj/iced", branch = "feature/image-from-bytes" }
